--- a/public/login.html
+++ b/public/login.html
@@ -9,54 +9,31 @@
 <body>
   <main class="auth-container">
     <h2>Iniciar Sesión</h2>
-    
+
     <form id="login-form">
-      <label for="email">Correo electrónico:</label>
-      <input type="email" name="email" id="email" required />
+      <fieldset>
+        <legend>Ingresá tus datos</legend>
 
-      <label for="password">Contraseña:</label>
-      <input type="password" name="password" id="password" required />
+        <div class="form-group">
+          <label for="email">Correo electrónico:</label>
+          <input type="email" id="email" name="email" required placeholder="usuario@correo.com" />
+        </div>
 
-      <button type="submit">Entrar</button>
+        <div class="form-group">
+          <label for="password">Contraseña:</label>
+          <input type="password" id="password" name="password" required placeholder="••••••••" />
+        </div>
+
+        <button type="submit">Entrar</button>
+      </fieldset>
     </form>
 
-    <div id="login-message"></div>
+    <div id="login-message" class="mensaje"></div>
 
     <p>¿No tenés cuenta? <a href="/register.html">Registrate acá</a></p>
-    <button onclick="window.location.href='index.html'">⬅ Volver al inicio</button>
+    <button type="button" onclick="window.location.href='/'">⬅ Volver al inicio</button>
   </main>
 
-  <script>
-    const form = document.getElementById("login-form");
-    const messageDiv = document.getElementById("login-message");
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      const email = form.email.value;
-      const password = form.password.value;
-
-      try {
-        const response = await fetch("/login", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ email, password })
-        });
-
-        const result = await response.json();
-
-        if (response.ok) {
-          localStorage.setItem("usuarioId", result.id); // Guarda ID
-          window.location.href = "/perfil.html";        // Redirige
-        } else {
-          messageDiv.textContent = `❌ ${result}`;
-          messageDiv.style.color = "red";
-        }
-      } catch (err) {
-        messageDiv.textContent = "❌ Error al conectar con el servidor";
-        messageDiv.style.color = "red";
-      }
-    });
-  </script>
+  <script src="login.js"></script>
 </body>
 </html>
