--- a/public/register.html
+++ b/public/register.html
@@ -10,51 +10,34 @@
     <h2>Crear Usuario</h2>
 
     <form id="register-form">
-      <input type="text" name="nombre" placeholder="Nombre completo" required>
-      <input type="email" name="email" placeholder="Correo electrónico" required>
-      <input type="password" name="password" placeholder="Contraseña" required>
-      <button type="submit">Registrarse</button>
+      <fieldset>
+        <legend>Completá tus datos</legend>
+
+        <div class="form-group">
+          <label for="nombre">Nombre completo:</label>
+          <input type="text" name="nombre" id="nombre" placeholder="Juan Pérez" required>
+        </div>
+
+        <div class="form-group">
+          <label for="email">Correo electrónico:</label>
+          <input type="email" name="email" id="email" placeholder="correo@ejemplo.com" required>
+        </div>
+
+        <div class="form-group">
+          <label for="password">Contraseña:</label>
+          <input type="password" name="password" id="password" placeholder="••••••••" required>
+        </div>
+
+        <button type="submit">Registrarse</button>
+      </fieldset>
     </form>
 
-    <div id="register-message"></div>
+    <div id="register-message" class="mensaje"></div>
 
     <p>¿Ya tenés cuenta? <a href="/login.html">Iniciar sesión</a></p>
-    <button onclick="window.location.href='index.html'">⬅ Volver al inicio</button>
+    <button type="button" onclick="window.location.href='/'">⬅ Volver al inicio</button>
   </main>
 
-  <script>
-    const form = document.getElementById("register-form");
-    const messageDiv = document.getElementById("register-message");
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      const nombre = form.nombre.value;
-      const email = form.email.value;
-      const password = form.password.value;
-
-      try {
-        const response = await fetch("/register", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ nombre, email, password })
-        });
-
-        const text = await response.text();
-
-        if (response.ok) {
-          messageDiv.textContent = "✅ Usuario registrado con éxito";
-          messageDiv.style.color = "green";
-          form.reset();
-        } else {
-          messageDiv.textContent = `❌ ${text}`;
-          messageDiv.style.color = "red";
-        }
-      } catch (err) {
-        messageDiv.textContent = "❌ Error al conectar con el servidor";
-        messageDiv.style.color = "red";
-      }
-    });
-  </script>
+  <script src="register.js"></script>
 </body>
 </html>
